watched-cards: fix alignment

--- a/src/components/MainContent/MainContentWatchedCards/MainContentWatchedCards.css
+++ b/src/components/MainContent/MainContentWatchedCards/MainContentWatchedCards.css
@@ -1,6 +1,6 @@
 .main-content-watched-cards{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 13px;
     align-self: stretch;
